--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -260,6 +260,8 @@ jobs:
         flavor:
           - FullRelease
           - FullReleaseNoGcm
+          - FullAppleEmojiRelease
+          - FullAppleEmojiReleaseNoGcm
           - MiniRelease
           - MiniReleaseNoGcm
     steps:
